--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=spring-cloud-config-server
 server.port=8888
+
+spring.cloud.config.server.git.uri=file:///home/yoav/work/tikal/spring-cloud-workshop/git-localconfig-repo
