--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.application.name=spring-cloud-config-server
 server.port=8888
 
+#my linux
 spring.cloud.config.server.git.uri=file:///home/yoav/work/tikal/spring-cloud-workshop/git-localconfig-repo
+
+#my windows
+#spring.cloud.config.server.git.uri=file://E://IdeaProjects//spring-cloud-config-workshop//spring-cloud-config-repository
