--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,9 @@ spring.application.name=spring-cloud-config-server
 server.port=8888
 
 #my linux
-spring.cloud.config.server.git.uri=file:///home/yoav/work/tikal/spring-cloud-workshop/git-localconfig-repo
+#spring.cloud.config.server.git.uri=file:///home/yoav/work/tikal/spring-cloud-workshop/git-localconfig-repo
 
 #my windows
-#spring.cloud.config.server.git.uri=file://E://IdeaProjects//spring-cloud-config-workshop//spring-cloud-config-repository
+#spring.cloud.config.server.git.uri=file:///E://IdeaProjects//spring-cloud-config-workshop//config-repo2
+spring.cloud.config.server.git.uri=file:///E://IdeaProjects//spring-cloud-config-workshop//spring-cloud-config-repository
+#spring.cloud.config.server.git.basedir=file:///E://IdeaProjects//spring-cloud-config-workshop//spring-cloud-config-repository
